[project]
name = "Auto-ML-Studio project"
version = "0.1.0"
description = "the requires of the project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.49.1",
    "joblib>=1.5.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "numpy<2.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy<1.14",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "xgboost>=3.1.2",
    "ydata-profiling>=4.12.2",
]
